--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type": "git",
     "url": "https://dasistwei.github.io/glasses_website/"
   },
+  "homepage": "https://dasistwei.github.io/glasses_website/",
   "keywords": [],
   "author": "",
   "license": "ISC",
