--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "week3-vite",
   "version": "1.0.0",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,10 +18,6 @@
     "url": "https://dasistwei.github.io/glasses_website/"
   },
   "homepage": "https://dasistwei.github.io/glasses_website/",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
     "ejs": "^3.1.10",
     "vite": "^5.3.3",
